# solar-flare

./: .pnp.cjs  Anchor.toml  README.md  client.ts  package-lock.json  package.json  tsconfig.json
programs/project_crowd_funding/: Cargo.toml
programs/project_crowd_funding/src/: errors.rs  lib.rs  lib.rs:Zone.Identifier  lib1.rs
programs/project_crowd_funding/src/instructions/: add_tier.rs  add_tier_v1.rs  contribute.rs  contribute_v1.rs  finalize.rs  finalize_project_v1.rs  init_project.rs  init_project_v1.rs  mod.rs  refund_v1.rs  reimburse.rs
programs/project_crowd_funding/src/state/: mod.rs  project.rs  project_v1.rs
tests/: finilazi.ts  project_crowd_funding.ts  refuns.ts
